@@ -1,5 +1,7 @@
 Вер.2.0.1:
 + добавлена поддержка кастомных интерфейсов
+* фикс затенения краев поля
+* фикс тегов cpu*, cpucl*, gpu*, ps*
 
 Вер.2.0.0:
 + добавлен виджет awesome widget
